2004-01-30  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* configure.in: enables resource usage (timetable) by default.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-application.[ch]
	new method to get the last uid associated with objects
	* libplanner/mrp-object.c
	get a new uid for new objects from mrp-application
	* libplanner/mrp-project.c
	clean the object uid code that is now in mrp-application
	* src/planner-resource-view.c
	first use of the new object id api

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/configure.in
	libgda disabled by default

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c
	Solved a core dump when you remove a resource that is been edited
	inline.
	Added undo for the remove resource operation. Missing some properties
	in the undo yet, but we are going to start using object ids before
	going more far.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-group-dialog.c
	* src/planner-group-model.c
	* src/planner-group-model.h
	When you add a new group, it is selected by default and the
	group name cell is in editing state.
	* src/planner-resource-view.c
	When you add a resource, the resource name cell is in editing state.

2004-01-28  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for all resources properties.

2004-01-25  Richard Hult  <richard@imendio.com>

	* src/Makefile.am (sql_plugin): 
	* configure.in: Fix sql plugin flags.

	* src/planner-window.c (window_undo_state_changed_cb) 
	(window_redo_state_changed_cb): Set tooltip as well.

2004-01-25  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for resource name property.
	Now it will be easy to add undo for all the other properties.
	* src/planner-task-tree.c: coding style corrections.

2004-01-25  Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-resource-view.c: Added undo for resource insertion.
