@@ -53,6 +53,7 @@ struct _MrpApplicationClass {
 GType            mrp_application_get_type      (void) G_GNUC_CONST;
 
 MrpApplication * mrp_application_new           (void);
-gulong           mrp_application_get_unique_id (void);
+guint            mrp_application_get_unique_id (void);
+gpointer       * mrp_application_id_get_data   (guint object_id);
 
 #endif /* __MRP_APPLICATION_H__ */
