@@ -1,3 +1,14 @@
+2004-02-01  Alvaro del Castillo  <acs@barrapunto.com>
+
+	* libplanner/mrp-application.c
+	* libplanner/mrp-application.h
+	* libplanner/mrp-object.c
+	* libplanner/mrp-private.h
+	* libplanner/mrp-project.c
+	final implementation for the new object id system
+	* src/planner-resource-view.c
+	first use of the new object id system
+
 2004-01-30  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
 	* configure.in: enables resource usage (timetable) by default.
